# wgpu_examples

./: .gitmodules  Cargo.toml  README.md
wgpu_gui_example/: Cargo.toml
wgpu_renderer_example/: Cargo.toml  index.html
wgpu_renderer_example/src/: lib.rs  performance_monitor.rs  textured_quad.rs
wgpu_renderer_example/src/geometry/: circle.rs  mod.rs  quad.rs
wgpu_renderer_example/src/renderer/: camera_controller.rs  mod.rs  renderer.rs
