[package]
name = "wgpu_renderer_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "wgpu_renderer_example"
test = false
doc = false

[dependencies]
# dependencies for wgpu 
cfg-if = "1"
env_logger = "0.10"
winit = "0.28"
pollster = "0.3"
wgpu = "0.17"
instant = "0.1"
cgmath = "0.18"
glam = "0.24"
# wgpu_renderer = { git = "https://github.com/FirePrincess01/wgpu_renderer.git", branch = "main" } 
wgpu_renderer = { path = "../wgpu_renderer" }
# other  
log = "0.4"
rusttype = "0.9"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
log = "0.4"
console_log = "1.0.0"
wgpu = { version = "0.17", features = [ "webgl" ]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
